css/style.css
/* ... */
.modal-write-us-inputs {
	display: flex;
	width: 100%;
	flex-wrap: wrap;
	padding-bottom: 5px;
}

.modal-write-us-name {
	width: 360px;
	margin-right: auto;
}

.modal-write-us-email {
	width: 360px;
}
.modal-write-us-field {
	display: block;

	font-family: "gilroyextrabold", Arial, sans-serif;
	font-size: 18px;
	line-height: 18px;
	color: #000000;
	margin-bottom: 36px;
}

.modal-write-us-field input[type="text"],
.modal-write-us-field input[type="email"],
.modal-write-us-field textarea {
	display: block;

	margin-top: 10px;
	padding-left: 20px;
	padding-right: 20px;
	padding-top: 15px;
	padding-bottom: 17px;

	font-family: "opensans", Arial, sans-serif;
	font-size: 14px;
	line-height: 18px;
	border: none;
	background-color: rgba(229, 229, 229, .5);
}

.modal-write-us-field input[type="text"],
.modal-write-us-field input[type="email"] {
	width: 360px;
}

.modal-write-us-field textarea {
	width: 760px;
	height: 156px;
	resize: none;
}

.modal-write-us-field input[type="text"]:hover,
.modal-write-us-field input[type="email"]:hover,
.modal-write-us-field textarea:hover {
	background-color: rgba(229, 229, 229, .8);
}

.modal-write-us-field input[type="text"]:focus,
.modal-write-us-field input[type="email"]:focus,
.modal-write-us-field textarea:focus {
	outline: 3px solid #f0c52e;
	background-color: #ffffff;
	color: rgba(70, 70, 70, 1);
}

.modal-write-us-field input:invalid {
	background-color: #f6dada;
} 

.modal-write-us-field input[placeholder] 						{ color: rgba(70, 70, 70, .4); }
.modal-write-us-field input::-webkit-input-placeholder 			{ color: rgba(70, 70, 70, .4); }
.modal-write-us-field input::-moz-placeholder 					{ color: rgba(70, 70, 70, .4); opacity: 1; }
.modal-write-us-field input:-moz-placeholder 					{ color: rgba(70, 70, 70, .4); opacity: 1; }
.modal-write-us-field input:-ms-input-placeholder 				{ color: rgba(70, 70, 70, .4); }

.modal-write-us-field textarea[placeholder] 						{ color: rgba(70, 70, 70, .4); }
.modal-write-us-field textarea::-webkit-input-placeholder 			{ color: rgba(70, 70, 70, .4); }
.modal-write-us-field textarea::-moz-placeholder 					{ color: rgba(70, 70, 70, .4); opacity: 1; }
.modal-write-us-field textarea:-moz-placeholder 					{ color: rgba(70, 70, 70, .4); opacity: 1; }
.modal-write-us-field textarea:-ms-input-placeholder 				{ color: rgba(70, 70, 70, .4); }

.modal-write-us-field input[placeholder]:focus 					{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field input:focus::-webkit-input-placeholder	{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field input:focus::-moz-placeholder 			{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field input:focus:-moz-placeholder				{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field input:focus:-ms-input-placeholder			{ color: rgba(70, 70, 70, 1); }

.modal-write-us-field textarea[placeholder]:focus 					{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field textarea:focus::-webkit-input-placeholder		{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field textarea:focus::-moz-placeholder 				{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field textarea:focus:-moz-placeholder				{ color: rgba(70, 70, 70, 1); }
.modal-write-us-field textarea:focus:-ms-input-placeholder			{ color: rgba(70, 70, 70, 1); }

.button-modal-write-us {
	min-width: 200px;
}

.modal-map {
	height: 559px;
	top: 50%;
	left: 50%;
	margin-left: -480px;
	margin-top: -279.5px;
}

/*.map-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 960px;
	height: 559px;

	z-index: -1;
}*/


.modal-close {
	position: absolute;
	top: 22px;
	right: 22px;
}


/* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++ MONOPODS.HTML ++++++++++++++++++++++++ */

/* ============== MAIN ============== */

.page-title {
	margin: 0;
	margin-bottom: 14px;
	padding: 0;
	/*padding-top: 32px;*/
	padding-left: 60px;
	font-family: "gilroyextrabold", Arial, sans-serif;
	font-size: 47px;
	line-height: 1.2;
	letter-spacing: .01em;
	color: #000000;

	background-color: #ffffff;
}

.breadcrumbs {
	list-style: none;
	margin: 0;
	padding: 0;
	margin-bottom: 40px;
	padding-left: 60px;
	display: flex;
	align-items: baseline;
}

.breadcrumbs a {
	padding-right: 37px;
}

.breadcrumbs li {
	margin: 0;
	padding: 0;
}

.breadcrumbs a {
	position: relative;
	box-sizing: border-box;
}

.breadcrumbs a::after {
	content: "";
	display: block;
	position: absolute;
	top: 50%;
	width: 4px;
	height: 8px;
	margin-top: -4px;

	background-image: url("../img/nav-arrow.svg");
	background-position: center;
	background-repeat: no-repeat;
}

.breadcrumbs li:first-of-type a::after {
	right: 19px;
}

.breadcrumbs li:nth-of-type(2) a::after {
	right: 17px;
}


.breadcrumbs a,
.breadcrumbs-current {
	font-size: 14px;
	line-height: 36px;
	letter-spacing: .01em;
	color: rgba(0, 0, 0, .3);
}

.breadcrumbs a:hover,
.breadcrumbs a:focus {
	color: rgba(0, 0, 0, .6);
}

.breadcrumbs a:active {
	color: rgba(0, 0, 0, .1);
}
/* ============== FILTER ============== */

.inner-content {
	display: flex;
}

.filter {
	width: 348px;
	flex-grow: 1;
	/*align-items: flex-end;*/
	background-color: #eeeeee;
}

.filter-header-container {
	display: flex;
	margin-bottom: 69px;

	background-color: rgba(0, 0, 0, .08);
}

.filter-header {
	display: flex;
	align-items: center;
	margin: 0;
	margin-left: auto;
	margin-right: 68px;
	width: 200px;
	min-height: 70px;

	font-family: "gilroyextrabold", Arial, sans-serif;
	font-size: 16px;
	line-height: 1.2;
	color: #000000;
	letter-spacing: .2em;
	text-transform: uppercase;

	/* --- TEMPORARY FOR GRID --- */
	/*box-shadow: inset 0 0 0 1px;*/
	/*background-color: rgba(255, 0, 0, .2);*/
	/* -------------------------- */
}

.filter-body-container {
	display: flex;
}
/* ... */

